namespace Application.Schemas.Models.GetSchema;

public sealed record GetSchemaResponse(string Name, string JsonSchema);

