@startuml Schema_GetSchema_Endpoint

' Endpoint: GET /schemas/{id}
' Controller: SchemaController
' Method: GetSchema

skinparam classAttributeIconSize 0
skinparam class {
    BackgroundColor<<Controller>> LightBlue
    BackgroundColor<<Service>> LightGreen
    BackgroundColor<<Repository>> LightYellow
    BackgroundColor<<Entity>> LightCoral
    BackgroundColor<<DTO>> LightGray
}

class SchemaController <<Controller>> {
    + GetSchema(id: int): GetSchemaResponse
}

interface ISchemaService <<Service>> {
    + GetSchema(id: int): GetSchemaResponse
}

class SchemaService <<Service>> {
    + GetSchema(id: int): GetSchemaResponse
}

class GetSchemaResponse <<DTO>> {
    + Name: string
    + JsonSchema: string
}

interface ISchemaRepository <<Repository>> {
    + Add(schema: Schema): void
    + GetAll(): List<Schema>
    + GetById(id: int): Schema?
    + SaveChanges(): void
}

class SchemaRepository <<Repository>> {
    + Add(schema: Schema): void
    + GetAll(): List<Schema>
    + GetById(id: int): Schema?
    + SaveChanges(): void
}

class Schema <<Entity>> {
    + Id: int
    + Name: string
    + JsonSchema: string
    + DataSets: List<DataSet>
}

' Relationships
SchemaController ..> ISchemaService : uses
SchemaController ..> GetSchemaResponse : returns
ISchemaService <|.. SchemaService : implements
SchemaService ..> ISchemaRepository : uses
SchemaService ..> GetSchemaResponse : creates
ISchemaRepository <|.. SchemaRepository : implements
SchemaRepository ..> Schema : persists

note right of SchemaController
  **HTTP GET** /schemas/{id}
  Retrieves schema by ID
  Status: 200 OK
end note

@enduml
